# RedisExchange

./: .gitignore  MarketDepth.php  README.md  displayPrice.php  exchange.rb  redisNewOrderAjax.php  satellite_servers  socketServer.js
API/: ReadME.md  app.js  index.js
API/routes/: depths.js  objects.js  users.js
JavaScriptClient/: instabid-ui.js  instabid.js  instabid.php  readME.md
exch/codegen/lib/: installation.dart
exch/config/: site-config.jam
exch/cpp/: CMakeLists.txt  Jamfile  Jamroot  cmake.gen.sh  exch.cmake
exch/cpp/app/exch_server/: CMakeLists.txt  Jamfile.v2  exch_server.cpp
exch/cpp/app/random_command_repository/: Jamfile.v2  random_command_repository.cpp
exch/cpp/exch/: events.hpp  exch.hpp  exchange.hpp  fill.hpp  interfaces.hpp  market.hpp  market_exch.hpp  market_mem.hpp  market_redis.hpp  order_book.hpp  publish.hpp  redis_server.hpp  redis_support.hpp  requests.hpp
exch/cpp/random_command/: random_command.hpp
exch/cpp/tests/exch/: Jamfile.v2  test_exchange.cpp  test_market_mem.cpp  test_market_redis.cpp  test_redis_support.cpp
exch/cpp_codegen/: pubspec.yaml
exch/cpp_codegen/lib/: installation.dart
exch/dart/: .gitignore  pubspec.yaml
exch/dart/lib/: exch_client.dart
exch/dart/lib/src/exch_client/: events.dart  exch_client.dart  requests.dart
exch/dart/test/: runner.dart
exch/dart/tool/: hop_runner.dart
exch/dart_codegen/: pubspec.yaml  services_ebisu.dart
htdocs/: example.php  features.php  index.html  login_instabid.php  login_process.php  pricing.php  product.php  register.php  register_process.php
htdocs/assets/: features-210dde0bae397cf48f56a0c4f6ec0c15.js  features-80cf343d7fa69534fac230f3232ea232.css  fonts.css.old  home-3342d2c10deac7bba8f332dbd1584070.js  home-3fd67bbe0ae6520a4950f43c16fdefcb.css  pricing-1fafe91ab310fac74d56650c328604d1.css  shared-site-977a404f8c67672bd807d7b22b348ee7.css  shared-site-db4a6a71928574c1be21fc3d812e037c.js
htdocs/lumino/: .sbc.php.swo  dash.php  exchanges.php  fills.php  graph.php  instabid.php  main.php  orders.php  products.php  sbc.php  sd.php  settings.php  sidebar.php  test.php  ui-fills.php  ui-graph.php  ui-orders.php  ui-products.php  ui-sbc.php  ui-sd.php
htdocs/lumino/css/: styles.css
htdocs/manage/assets/: application.manage-5f7b52cfc85769c67834855af5cd18a5.css  config-aead70c07cdca45cec67e4141bf18edc.js  curl  instabid-ui.js  instabid.php  instabid.php.txt  instabid.py  instabid.rb  instabid_realtime.js  instabid_realtime.js.stable  iovation_config-1195793ef31241e2149d6a7b2d3658ba.js  login-54a7c85eeac3d3050ee34c3cd0d593ca.js  modernizr-16114bbaf42d14126fb991d11fc0b961.js  password-indicator-43e2996773e71e0b05739d6865dd7c4c.js  register-43a7266fe4a6b0fbdd363024e60cba7c.js  register-julien.js  toto.php  zxcvbn-8143efb328ef1456bebfa7ebd1a127be.js
notes/: build_notes.md
redis-rb/: now.rb  sub.rb  sub.rb.broke  sub.rb.perfect  sub.rb.perfect.old  substart  substop
satellite_servers/API/: package.json  start  stop
satellite_servers/API/routes/: exchanges.js  fills.js  index.js
satellite_servers/configurationServer/: now.py  substart  substop
satellite_servers/socketServer/: socketServer.js  test.js
web/API/: app.js  substart
web/API/routes/: graphs.js  objects.js  orders.js  product.js  products.js
web/configurationServer/: configurationServerService.py  test.py
web/socketServer/: package.json  start  stop
